<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundCardView">

        <ImageView
            android:id="@+id/momentItemImage"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="6dp"
            tools:src="@drawable/wolf_android_logo" />

        <TextView
            android:id="@+id/catNameItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:background="@color/backgroundColor"
            android:hint="@string/cat_s_name"
            android:paddingLeft="6dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleItemText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title_settings"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/momentItemImage" />

        <TextView
            android:id="@+id/descriptionItemText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description_settings"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_marginLeft="6dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleItemText" />

        <TextView
            android:id="@+id/itemTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:text="a while ago"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionItemText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>