<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MomentSettingsFragment"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/momentImage"
        android:src="@color/backgroundColorCard"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:paddingTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="6dp"
        />

    <EditText
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/title_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/momentImage" />

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/description_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <Button
        android:id="@+id/saveMomentButton"
        android:background="@color/backgroundColorCard"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save_this_moment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarSettings"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/saveMomentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

    <ImageView
        android:id="@+id/camera_image"
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:alpha="0.5"
        android:src="@drawable/ic_photo_camera_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/momentImage"
        app:layout_constraintEnd_toEndOf="@+id/momentImage"
        app:layout_constraintStart_toStartOf="@+id/momentImage"
        app:layout_constraintTop_toTopOf="@+id/momentImage"
        />

    <TextView
        android:id="@+id/catNameSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/camera_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/momentImage"

        />


</androidx.constraintlayout.widget.ConstraintLayout>